--- a/src/pug/part2.pug
+++ b/src/pug/part2.pug
@@ -10,14 +10,10 @@ body
 
 .content
     .head
-        h1 SCIENCE OF THE KITCHEN: TASTE AND TEXTURE
+        h1 TASTE AND TEXTURE
         h2 PART TWO: TEXTURE
         p by Janet A Zimmerman
-        .pagin
-            .prevpage
-                h1 back
-            .nextpage
-                h1 next
+        
     //- .contents
     //-     ul
     //-         li#elem1 Intro
@@ -44,9 +40,9 @@ body
         p Not only do all the italicized terms describe texture, but also if you read carefully, you'll notice that no terms in the paragraph say anything directly about taste or flavor.
         p Look more closely, and you'll discover another thing about texture. In many cases, what we like and dislike about the texture of our food is a direct result of what we expect from a particular food. "Chewy," for example, is a textural feature that we like when we're talking about caramel or beef jerky, but not when we're talking about steak or biscuits. Or, as another example, think about the texture of custard compared with that of scrambled eggs. Many people enjoy both, but few would want the former with the texture of the latter.
         p From a very informal survey (okay, sitting around talking over drinks with a bunch of food-oriented friends), I think, too, that the textures we like -- even more so than the tastes we like -- are dependent on the foods we grew up with (which, of course, color our expectations of food for most of our lives). Okra is a perfect example. Of all the times I've heard people talk about okra, two things stand out. First, no one ever talks about the taste. Second, almost without exception, Southerners like it, Northerners say it's gross and slimy. Something tells me that it's no slimier in the North than in the South, so it seems likely that the difference lies in what the two groups grew up eating.
-        //- .pagin
-        //-     .nextpage#first
-        //-         h1 next
+        .pagin
+            .nextpage.full-length
+                h1 next
     .main.cat
         h3 CATEGORIES OF TEXTURE
         p "Texture," of course, is a very broad term, referring to different types of sensations. So what is texture, exactly? In the broadest sense, texture refers to the way food feels in the mouth, rather than how it tastes or smells. There are texture terms that describe the way foods feel against the teeth or how they coat the mouth, terms that refer to sensations of pain caused by some of the foods we eat, terms that describe the moisture content. Let's take a quick look.
@@ -65,11 +61,11 @@ body
         p Much human ingenuity has gone into leavening. Cooks have used numerous methods including chemical reactions (baking powder or yeast) and physical structure (whipping cream or eggs) to lighten the texture of foods from breads to mousse to cakes to souffles.
         p Of course, we can only manipulate the density of certain foods -- those that require mixing. Baked goods, desserts and sauces are the serious contenders for playing with texture. Meat and vegetables, for example, keep pretty much the same density level regardless of what we do to them.
         p It may seem that as far as density goes, the lighter, the better, but this is not always so. Sometimes we want our desserts dense -- think of fudgy style brownies or flourless chocolate cake. Sometimes we like a dense, chewy bread rather than a light and fluffy Parker House roll. Sometimes we want clotted cream instead of whipped cream, or a quiche instead of a souffle.
-        //- .pagin
-        //-     .prevpage
-        //-         h1 back
-        //-     .nextpage
-        //-         h1 next
+        .pagin
+            .prevpage
+                h1 back
+            .nextpage
+                h1 next
     .main.chem
         h3 CHEMOSENSORY IRRITATION
         p It might sound odd to talk about the burn of chiles as a texture. Certainly, this and other chemosensory irritations are categorically different from the kinds of textures we've been talking about so far. Yet all the burns and tingles we experience from mint, ginger, mustard and the like are non-gustatory, physical sensations directly caused by the foods we eat, and in that sense they fall into the broad category of texture.
@@ -95,11 +91,11 @@ body
         p The tingly feeling we get when drinking carbonated drinks is also caused by a chemical reaction. One of our many enzymes, carbonic anhydrase, which creates acid from carbon dioxide and water, has been shown to play a big role in our sensing this "tingle." (Some medications given to glaucoma patients inhibit this enzyme; they can significantly alter the patients' experience of carbonation.)
         p But unlike the other irritants I've been discussing, carbonation also has a physical side -- all those bubbles physically alter the feel of the carbonated drinks. They keep the liquid from lying on the tongue for long; they pop and make the liquid "fizzy." Flat soft drinks taste sweeter and feel thicker without the "scrubbing bubble" effect of carbonation. Cheap sparkling wine (not that any of you would drink it) might be bearable when freshly opened, but all those off-flavors become painfully obvious after the carbonation dissipates, when all the wine can do is lie on your tongue and linger.
         p Carbonation has an additional benefit: it can serve to cut through the heavy texture of rich and fatty foods. Since we're just about to turn to the subject of "mouthfeel," we'll be seeing carbonation again soon.
-        //- .pagin
-        //-     .prevpage
-        //-         h1 back
-        //-     .nextpage
-        //-         h1 next
+        .pagin
+            .prevpage
+                h1 back
+            .nextpage
+                h1 next
     .main.mouth
         h3 MOUTHFEEL
         p Chances are, if you're familiar with the term "mouthfeel," you associate it with descriptions of wine. Wine geeks always seem to go on about mouthfeel, which can seem extremely silly to wine novices. What is mouthfeel, you might ask, and why should you care about it?
@@ -121,30 +117,30 @@ body
         p Ingredients that are naturally high in glutamates contribute a quality of richness to the dishes where they appear. For instance, it's very surprising to many people, on eating their first Thai salad, to find that the dressing generally contains no oil -- the fish sauce provides the unctuous feeling they associate with oil. If you leave out the fish sauce, the salad will not only taste less complex, but it will also feel less satisfying.
         p Food manufacturers that add MSG (monosodium glutamate) to their products do it as much for mouthfeel as they do for flavor. If you tried the exercise at the end of Part One involving MSG, you probably noticed that the water with MSG not only tasted vaguely brothy, but it also felt fuller on the tongue than plain water. I unabashedly admit to adding a pinch of MSG to many dishes, especially soups with meat and poultry. I don't do it for the flavor, I do it for the mouthfeel.
         p You don't have to follow my lead, though. There are plenty of ingredients, like fish sauce, with natural glutamates. Experiment with mushrooms, aged cheeses, cured meats, Worcestershire sauce, or grapefruit to alter the mouthfeel of the dishes you cook or eat.
-        //- .pagin
-        //-     .prevpage
-        //-         h1 back
-        //-     .nextpage
-        //-         h1 next
+        .pagin
+            .prevpage
+                h1 back
+            .nextpage
+                h1 next
     .main.tt
         h3 TEXTURE AND TASTE
         p So, now that we've separated texture from taste and we understand it a little better, let's turn around and put them back together (come on, you knew I would do this, didn't you?) They don't, after all, exist independent from each other; they're part of a package.
         p Texture can affect flavor in a couple of important ways, so let's start with that. First, the texture of the food we eat helps to determine how much of the surface area can interact with our taste cells. Think about the difference in flavor intensity between carrot chunks, grated carrot and carrot juice. Put a big chunk of carrot in your mouth, and you don't taste much until you crunch down on it and break it into smaller pieces. Taste a spoonful of grated carrot, and the flavor is much more apparent. Sip on a glass of carrot juice, and you get a blast of carrot flavor immediately.
         p The length of time food spends in the mouth also obviously will affect how strong its flavor seems. We've seen that viscous liquids and rich foods coat the mouth; their tastants thus spend more time with the taste cells than thinner liquids and leaner foods, so they often seem more flavorful. Dense foods, likewise, come into contact with more taste cells than do aerated, lighter foods. Chewy foods take longer to break down enough to swallow than do softer foods, so we get more flavor from them.
         p Does this mean that we want to limit ourselves to those textures that promote the greatest flavor? No, not at all. If you've learned only thing from this class, I hope it's that variety makes the our culinary world go round -- contrasting and balancing textures is just as important to our gustatory pleasure as combining and balancing tastes and flavors. We're human; it's in our nature to embrace variety.
-        //- .pagin
-        //-     .prevpage
-        //-         h1 back
-        //-     .nextpage
-        //-         h1 next
+        .pagin
+            .prevpage
+                h1 back
+            .nextpage
+                h1 next
     .main.step
         h2 THE NEXT STEP
         p Building on all the practice you've had analyzing the flavor of your foods, now you can begin to combine that with an awareness of their textures. Concentrate on all the crispy, crunchy, soft, silky creamy, puckery, chewy, moist, hot, succulent, and tingly aspects of your foods, and I promise you'll get more out of your cooking and dining.
-        //- .pagin
-        //-     .prevpage
-        //-         h1 back
-        //-     .nextpage
-        //-         h1 next
+        .pagin
+            .prevpage
+                h1 back
+            .nextpage
+                h1 next
     .main.exp
         h2 EXPERIMENTS
         h3 Noticing Texture
@@ -160,8 +156,8 @@ body
         p You'll need oil and vinegar or lemon juice for this, plus a few leaves of lettuce. First, pour a little oil into a bowl, and a little vinegar or lemon juice into another. Mix vinaigrettes in the following proportions: one oil to two vinegar, one oil to one vinegar and two vinegar to one oil. Beginning with the plain oil and ending with the plain vinegar, dip a small piece on lettuce into each and taste it. Note how the mouthfeel changes as the acid increases. Which mixture works the best for you?
         p If you like, repeat the experiment using an astringent green such as arugula. Does your preference change?
         p Ask your questions about this course here.
-        //- .pagin
-        //-     .prevpage#last
-        //-         h1 back
+        .pagin
+            .prevpage.full-length
+                h1 back
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
 script(src="js/effects.js")
