--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -18,12 +18,8 @@ body
     line-height: 40px
     width: 70%
     margin: 0 auto
-.cat,
-.chem,
-.mouth,
-.tt,
-.step,
-.exp
+.cat,.chem,.mouth,.tt,.step,.exp,
+.big-four,.four-tastes,.other-flavs,.flav-beyond,.experiments
     display: none
 .pagin
     width: 100%
@@ -32,16 +28,29 @@ body
     justify-content: center
     .nextpage, .prevpage
         display: none
-        width: 50%
+        width: 100%
         height: 100px
-        color: #666
+        color: #333
         transition: background-color .2s, color .2s
         display: flex
         align-items: center
         justify-content: center
         cursor: pointer
+        .next, .title
+            transition: all .2s ease-in-out
+            font-size: 40px
+            font-weight: bold
+        .next
+            position: absolute
+            z-index: -999
+            opacity: 1
+        .title
+            z-index: 999
+            opacity: 0
     .nextpage:hover, .prevpage:hover
-        color: #FFF
-        background-color: #666
+        .next
+            opacity: 0
+        .title
+            opacity: 1
 .full-length
         width: 100%
