--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -40,6 +40,7 @@ body
             transition: all .2s ease-in-out
             font-size: 40px
             font-weight: bold
+            text-align: center
         .next
             position: absolute
             z-index: -999
