Added contents and changed some classes to IDs because of content hrefs

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -5,13 +5,13 @@ head
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet", href="styles/style.css")
-    title Texture and Tasting: Part 2
+    title Texture and Tasting
 body
     .content
         .head
-            h1 Texture and Tasting (Part 2)
+            h1 Texture and Tasting
         .main#foreword
-            h2 A foreword from me, Eduardo
+            h2 A foreword from me
             p 
                 | The contents of this guide on coffee tasting and palate training wasn't actually written by me. I was browsing on the /r/Coffee subreddit when I came across 
                 a(href="https://www.reddit.com/r/Coffee/comments/6jkwri/how_do_i_improve_my_taste_profiling/") this post.
