--- a/src/pug/part1.pug
+++ b/src/pug/part1.pug
@@ -27,6 +27,8 @@ body
                     a(href="#experiments") Experiments
                 li 
                     a(href="part2.html") Part 2
+                li  
+                    a(href="index.html") Back to the home page thing
         .main#terms
             include extracts/part1/terms/01terms.pug
             include extracts/part1/terms/02tsf.pug
