--- a/src/pug/part2.pug
+++ b/src/pug/part2.pug
@@ -15,6 +15,8 @@ body
         p by Janet A Zimmerman
         .contents
             ul
+                li
+                    a(href="part1.html") Part 1
                 li 
                     a(href="#intro") Intro
                 li 
@@ -29,6 +31,8 @@ body
                     a(href="#step") Next Steps
                 li 
                     a(href="#exp") Experiments
+                li  
+                    a(href="index.html") Back to the home page thing
     .main#intro
         h3 Introduction
         p A friend of mine spent quite a bit of time in Cambodia over the space of several years. On her last trip back, her hosts held a banquet in her honor, which featured, among other things, fried crickets. Being a gracious guest, she summoned up her resolve and tasted one. When she was back in the states relating this tale, I asked her what they tasted like. Her response: "The legs were sharp and stickery, the outside was really hard and crunchy, and the insides were squishy."
@@ -47,7 +51,8 @@ body
         p From a very informal survey (okay, sitting around talking over drinks with a bunch of food-oriented friends), I think, too, that the textures we like -- even more so than the tastes we like -- are dependent on the foods we grew up with (which, of course, color our expectations of food for most of our lives). Okra is a perfect example. Of all the times I've heard people talk about okra, two things stand out. First, no one ever talks about the taste. Second, almost without exception, Southerners like it, Northerners say it's gross and slimy. Something tells me that it's no slimier in the North than in the South, so it seems likely that the difference lies in what the two groups grew up eating.
         .pagin
             .nextpage.full-length
-                h1 next
+                .next next
+                .title Categories of Texture
     .main#cat
         h3 Categories of Texture
         p "Texture," of course, is a very broad term, referring to different types of sensations. So what is texture, exactly? In the broadest sense, texture refers to the way food feels in the mouth, rather than how it tastes or smells. There are texture terms that describe the way foods feel against the teeth or how they coat the mouth, terms that refer to sensations of pain caused by some of the foods we eat, terms that describe the moisture content. Let's take a quick look.
@@ -68,9 +73,11 @@ body
         p It may seem that as far as density goes, the lighter, the better, but this is not always so. Sometimes we want our desserts dense -- think of fudgy style brownies or flourless chocolate cake. Sometimes we like a dense, chewy bread rather than a light and fluffy Parker House roll. Sometimes we want clotted cream instead of whipped cream, or a quiche instead of a souffle.
         .pagin
             .prevpage
-                h1 back
+                .next back
+                .title Introduction
             .nextpage
-                h1 next
+                .next next
+                .title Chemosensory Irritation
     .main#chem
         h3 Chemosensory Irritation
         p It might sound odd to talk about the burn of chiles as a texture. Certainly, this and other chemosensory irritations are categorically different from the kinds of textures we've been talking about so far. Yet all the burns and tingles we experience from mint, ginger, mustard and the like are non-gustatory, physical sensations directly caused by the foods we eat, and in that sense they fall into the broad category of texture.
@@ -98,9 +105,11 @@ body
         p Carbonation has an additional benefit: it can serve to cut through the heavy texture of rich and fatty foods. Since we're just about to turn to the subject of "mouthfeel," we'll be seeing carbonation again soon.
         .pagin
             .prevpage
-                h1 back
+                .next back
+                .title Categories of Texture
             .nextpage
-                h1 next
+                .next next
+                .title Mouthfeel
     .main#mouth
         h3 Mouthfeel
         p Chances are, if you're familiar with the term "mouthfeel," you associate it with descriptions of wine. Wine geeks always seem to go on about mouthfeel, which can seem extremely silly to wine novices. What is mouthfeel, you might ask, and why should you care about it?
@@ -124,9 +133,11 @@ body
         p You don't have to follow my lead, though. There are plenty of ingredients, like fish sauce, with natural glutamates. Experiment with mushrooms, aged cheeses, cured meats, Worcestershire sauce, or grapefruit to alter the mouthfeel of the dishes you cook or eat.
         .pagin
             .prevpage
-                h1 back
+                .next back
+                .title Chemosensory Irritation
             .nextpage
-                h1 next
+                .next next
+                .title Texture &amp; Taste
     .main#tt
         h3 Texture and Taste
         p So, now that we've separated texture from taste and we understand it a little better, let's turn around and put them back together (come on, you knew I would do this, didn't you?) They don't, after all, exist independent from each other; they're part of a package.
@@ -135,17 +146,21 @@ body
         p Does this mean that we want to limit ourselves to those textures that promote the greatest flavor? No, not at all. If you've learned only thing from this class, I hope it's that variety makes the our culinary world go round -- contrasting and balancing textures is just as important to our gustatory pleasure as combining and balancing tastes and flavors. We're human; it's in our nature to embrace variety.
         .pagin
             .prevpage
-                h1 back
+                .next back
+                .title Mouthfeel
             .nextpage
-                h1 next
+                .next next
+                .title Next Steps
     .main#step
         h2 The Next Step
         p Building on all the practice you've had analyzing the flavor of your foods, now you can begin to combine that with an awareness of their textures. Concentrate on all the crispy, crunchy, soft, silky creamy, puckery, chewy, moist, hot, succulent, and tingly aspects of your foods, and I promise you'll get more out of your cooking and dining.
         .pagin
             .prevpage
-                h1 back
+                .next back
+                .title Texture &amp; Taste
             .nextpage
-                h1 next
+                .next next
+                .title Experiments
     .main#exp
         h2 Experiments
         h3 Noticing Texture
@@ -163,6 +178,7 @@ body
         p Ask your questions about this course here.
         .pagin
             .prevpage.full-length
-                h1 back
+                .next prev
+                .title Next Steps
 script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
 script(src="js/effects.js")
