--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -18,9 +18,9 @@ body
     line-height: 40px
     width: 70%
     margin: 0 auto
-.cat,.chem,.mouth,.tt,.step,.exp,
-.big-four,.four-tastes,.other-flavs,.flav-beyond,.experiments
     display: none
+#intro, #terms, #foreword, #display
+    display: block
 .pagin
     width: 100%
     display: flex
