I don't even know what I changed anymore

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,7 +9,13 @@ head
 body
     .content
         .head
-            h1 Texture and Tasting
+            h1 TEXTURE &amp; TASTING
+        .contents
+            ul
+                li 
+                    a(href="part1.html") Part 1
+                li 
+                    a(href="part2.html") Part2
         .main#foreword
             h2 A foreword from me
             p 
