--- a/src/pug/part1.pug
+++ b/src/pug/part1.pug
@@ -11,8 +11,11 @@ body
         .head
             h1 TASTE AND TEXTURE 
             h2 PART 1: TASTE
+            p by Janet A Zimmerman
         .contents
             ul
+                li 
+                    a(href="part2.html") Part 2
                 li 
                     a(href="#terms") Terms and Definitions
                 li 
@@ -25,8 +28,7 @@ body
                     a(href="#flav-beyond") Flavor &amp; Beyond
                 li 
                     a(href="#experiments") Experiments
-                li 
-                    a(href="part2.html") Part 2
+
                 li  
                     a(href="index.html") Back to the home page thing
         .main#terms
