--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,15 +1,37 @@
+@import url('https://fonts.googleapis.com/css?family=Yeseva+One|Source+Sans+Pro')
+$source-sans: 'Source Sans Pro', sans-serif
+$cursive: 'Yeseva One', cursive
+// *
+//     padding: 0
+//     margin: 0
 body
     font-family: Arial, Helvetica, sans-serif
+    margin: 0
+    padding: 0
+p, li
+    font-family: $source-sans
+    font-size: 1em
+    // margin: 1em auto
+h1, h2, h3, h4
+    font-family: $cursive
+h1, h2
+    letter-spacing: 0.089em
+h1
+    margin: 0.67em auto
+h2
+    margin: 0.83em auto
+
 .content
     width: 80%
     margin: 0 auto
 .contents
-    margin: 0 auto
-    ul  
+    display: flex
+    align-items: center
+    justify-content: center
+    ul
         li
             display: inline-block
             padding: 5px
-            margin: 0
             list-style-type: none
             list-style-image: none
 .head
@@ -39,6 +61,7 @@ body
         .next, .title
             transition: all .2s ease-in-out
             font-size: 40px
+            font-family: $cursive
             font-weight: bold
             text-align: center
         .next
