Added some stuff

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -15,16 +15,16 @@ body
                 li 
                     a(href="part1.html") Part 1
                 li 
-                    a(href="part2.html") Part2
+                    a(href="part2.html") Part 2
         .main#foreword
             h2 A foreword from me
             p 
                 | The contents of this guide on coffee tasting and palate training wasn't actually written by me. I was browsing on the /r/Coffee subreddit when I came across 
-                a(href="https://www.reddit.com/r/Coffee/comments/6jkwri/how_do_i_improve_my_taste_profiling/") this post.
+                a(href="https://www.reddit.com/r/Coffee/comments/6jkwri/how_do_i_improve_my_taste_profiling/", target="_blank") this post.
                 |  This led me to forum posts 
-                a(href="https://forums.egullet.org/topic/41441-taste-texture-part-one/") one
+                a(href="https://forums.egullet.org/topic/41441-taste-texture-part-one/", target="_blank") one
                 |  and 
-                a(href="https://forums.egullet.org/topic/44502-taste-texture-part-two/") two.
+                a(href="https://forums.egullet.org/topic/44502-taste-texture-part-two/", target="_blank") two.
             
             p So me being the bored 20 year old me, I decided to pretty them up a little because I'm looking for things to do.
         .main#display
