--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -15,7 +15,7 @@ p, li
 h1, h2, h3, h4
     font-family: $cursive
 h1, h2
-    letter-spacing: 0.089em
+    letter-spacing: 0.07em
 h1
     margin: 0.67em auto
 h2
@@ -51,7 +51,8 @@ h2
     .nextpage, .prevpage
         display: none
         width: 100%
-        height: 100px
+        height: 200px
+        bottom: 10px
         color: #333
         transition: background-color .2s, color .2s
         display: flex
