--- a/src/pug/part2.pug
+++ b/src/pug/part2.pug
@@ -5,6 +5,7 @@ head
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     link(rel="stylesheet", href="styles/style.css")
+    link(rel="stylesheet", href="styles/hover.css")
     title Taste and Texture Part 2
 body
     .content
@@ -15,23 +16,23 @@ body
         .contents
             ul
                 li
-                    a(href="part1.html") Part 1
+                    a(href="part1.html").hvr-underline-from-left Part 1
                 li 
-                    a(href="#intro") Intro
+                    a(href="#intro").hvr-underline-from-left Intro
                 li 
-                    a(href="#cat") Categories of Texture
+                    a(href="#cat").hvr-underline-from-left Categories of Texture
                 li 
-                    a(href="#chem") Chemosensory Irritation
+                    a(href="#chem").hvr-underline-from-left Chemosensory Irritation
                 li 
-                    a(href="#mouth") Mouthfeel
+                    a(href="#mouth").hvr-underline-from-left Mouthfeel
                 li 
-                    a(href="#tt") Texture &amp; Taste
+                    a(href="#tt").hvr-underline-from-left Texture &amp; Taste
                 li 
-                    a(href="#step") Next Steps
+                    a(href="#step").hvr-underline-from-left Next Steps
                 li 
-                    a(href="#exp") Experiments
+                    a(href="#exp").hvr-underline-from-left Experiments
                 li  
-                    a(href="index.html") Back to the home page thing
+                    a(href="index.html").hvr-underline-from-left Back to the home page thing
         .main#intro
             h3 Introduction
             p A friend of mine spent quite a bit of time in Cambodia over the space of several years. On her last trip back, her hosts held a banquet in her honor, which featured, among other things, fried crickets. Being a gracious guest, she summoned up her resolve and tasted one. When she was back in the states relating this tale, I asked her what they tasted like. Her response: "The legs were sharp and stickery, the outside was really hard and crunchy, and the insides were squishy."
