--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -20,7 +20,12 @@ h1
     margin: 0.67em auto
 h2
     margin: 0.83em auto
-
+a, a:visited, a:active,
+    color: #666
+    text-decoration: none
+    transition: all .1s ease-in-out
+a:hover
+    color: #222
 .content
     width: 80%
     margin: 0 auto
