Rearranged some list elements

--- a/src/pug/part1.pug
+++ b/src/pug/part1.pug
@@ -13,10 +13,13 @@ body
             h1 TASTE AND TEXTURE 
             h2 PART 1: TASTE
             p by Janet A Zimmerman
-        .contents
             ul
                 li 
                     a(href="part2.html").hvr-underline-from-left Part 2
+                li  
+                    a(href="index.html").hvr-underline-from-left Back Home
+        .contents
+            ul
                 li 
                     a(href="#terms").hvr-underline-from-left Terms and Definitions
                 li 
@@ -29,8 +32,7 @@ body
                     a(href="#flav-beyond").hvr-underline-from-left Flavor &amp; Beyond
                 li 
                     a(href="#experiments").hvr-underline-from-left Experiments
-                li  
-                    a(href="index.html").hvr-underline-from-left Back to the home page thing
+                
         .main#terms
             include extracts/part1/terms/01terms.pug
             include extracts/part1/terms/02tsf.pug
