--- a/src/pug/part2.pug
+++ b/src/pug/part2.pug
@@ -13,10 +13,13 @@ body
             h1 TASTE AND TEXTURE
             h2 PART 2: TEXTURE
             p by Janet A Zimmerman
-        .contents
             ul
                 li
                     a(href="part1.html").hvr-underline-from-left Part 1
+                li  
+                    a(href="index.html").hvr-underline-from-left Back Home
+        .contents
+            ul
                 li 
                     a(href="#intro").hvr-underline-from-left Intro
                 li 
@@ -31,8 +34,7 @@ body
                     a(href="#step").hvr-underline-from-left Next Steps
                 li 
                     a(href="#exp").hvr-underline-from-left Experiments
-                li  
-                    a(href="index.html").hvr-underline-from-left Back to the home page thing
+                
         .main#intro
             h3 Introduction
             p A friend of mine spent quite a bit of time in Cambodia over the space of several years. On her last trip back, her hosts held a banquet in her honor, which featured, among other things, fried crickets. Being a gracious guest, she summoned up her resolve and tasted one. When she was back in the states relating this tale, I asked her what they tasted like. Her response: "The legs were sharp and stickery, the outside was really hard and crunchy, and the insides were squishy."
