Changing the fonts again

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -10,7 +10,7 @@ head
 body
     .content
         .head
-            h1 TEXTURE &amp; TASTING
+            h1 TASTE &amp; TEXTURE 
         .contents
             ul
                 li 
