--- a/src/pug/part1.pug
+++ b/src/pug/part1.pug
@@ -10,8 +10,8 @@ head
 body
     .content
         .head
-            h1 TASTE AND TEXTURE 
-            h2 PART 1: TASTE
+            h1 TASTE &amp; TEXTURE 
+            h2 PART 1: TEXTURE
             p by Janet A Zimmerman
             ul
                 li 
