--- a/src/pug/part2.pug
+++ b/src/pug/part2.pug
@@ -10,8 +10,8 @@ head
 body
     .content
         .head
-            h1 TASTE AND TEXTURE
-            h2 PART 2: TEXTURE
+            h1 TASTE &amp; TEXTURE 
+            h2 PART 2: TASTE
             p by Janet A Zimmerman
             ul
                 li
