--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,6 +10,9 @@ body
     padding: 0
 p, li
     font-family: $source-sans
+ul
+    padding: 0
+p, li
     font-size: 1em
     // margin: 1em auto
 li
@@ -19,11 +22,13 @@ li
     padding: 5px
 h1, h2, h3, h4
     font-family: $cursive
-h1, h2
+    font-weight: 500
     letter-spacing: 0.07em
 h1
+    font-size: 40px
     margin: 0.67em auto
 h2
+    font-weight: 500
     margin: 0.83em auto
 a, a:visited, a:active,
     color: #666
