Fixed up the annoying shifty shift problem with pages without enough content

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -31,8 +31,16 @@ body
         .main#display
             h2 Enter the posts
             .parts.part1
-                h3.hvr-underline-from-left 
-                    a(href="part1.html") View Part 1 here
+                h3
+                    a(href="part1.html").hvr-underline-from-left  View Part 1 here
             .parts.part2
-                h3.hvr-underline-from-left
-                    a(href="part2.html") View Part 2 here
+                h3
+                    a(href="part2.html").hvr-underline-from-left View Part 2 here
+        .main#me
+            h2 My Own Coffee Life
+            p I like coffee but like any coffee enthusiast, I'd say that's an understatement.
+            p I'm brewing an Ethiopian Yirgacheffe Kochere from 
+                a(href="https://shop.padrecoffee.com.au/collections/coffee/products/ethiopia-yirgacheffe-kochere") Padre Coffee.
+            p Currently using a Hario v60 using Matt Perger's standard 
+                a(href="https://vimeo.com/46612013") recipe and method 
+                | (because I'm lazy, so what, don't judge)
