--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -44,3 +44,4 @@ body
             p Currently using a Hario v60 using Matt Perger's standard 
                 a(href="https://vimeo.com/46612013") recipe and method
                 |  (because I'm lazy, so what, don't judge)
+script(src="js/analytics.js")
